# automato

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
examples/base-runner-with-tasks/: pyproject.toml
examples/base-runner-with-tasks/base_runner_with_tasks/: runner.py
src/automato/: __init__.py  app.py  logging.py  notification.py  runner.py
src/ssonar/: notification.py  runner.py  scraper.py
src/ssonar/service/: email.py
tests/automato/: notification_test.py
tests/ssonar/: notification_test.py  runner_test.py
