[tool.poetry]
name = "s-sonar"
version = "0.2.1"
description = "Monitoring utils and helpers"
authors = ["Unknown"]
readme = "README.md"
packages = [{include = "ssonar", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
ruff = "^0.5.7"
pytest = "^8.3.2"
pre-commit = "^3.8.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
