[tool.poetry]
name = "base-runner-with-tasks"
version = "0.1.0"
description = ""
authors = ["Simon Kostolny <simon.kostolny@innovatrics.com>"]

[tool.poetry.dependencies]
python = "^3.11"
automato = { path = "../../", develop = true }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
